# glap

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
example/: CMakeLists.txt  multiwindow.cpp  triangle.cpp
include/: CMakeLists.txt  glapp.hpp
test/: CMakeLists.txt  test.cpp
